--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3ed8ad4
-	trimbase = 
+	trim = cob_gazebo_ros_control
+	base = 9a7afde
+	trimbase = 3ed8ad4
 	parent = upstream
 	previous = c0d7d58
