--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 95f8f75
-	trimbase = 
+	trim = cob_gazebo_plugins
+	base = 22c1335
+	trimbase = 95f8f75
 	parent = upstream
 	previous = c0d7d58
