--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b4b5e0a
+	base = 136b562
 	trimbase = 
 	parent = debian/indigo/cob_gazebo_plugins
-	previous = 
+	previous = b4b5e0a
