--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9a7afde
+	base = 3640e77
 	trimbase = 
 	parent = release/indigo/cob_gazebo_ros_control
-	previous = 
+	previous = 9a7afde
