--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1ebdac5
+	base = e9cf0ae
 	trimbase = 
 	parent = debian/indigo/cob_gazebo_ros_control
-	previous = 
+	previous = 1ebdac5
