--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22c1335
+	base = 56887e1
 	trimbase = 
 	parent = release/indigo/cob_gazebo_plugins
-	previous = 
+	previous = 22c1335
