--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4c87c4
+	base = fe34d79
 	trimbase = 
 	parent = rpm/indigo/cob_gazebo_plugins
-	previous = 
+	previous = c4c87c4
