--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 708ad46
+	base = 048b621
 	trimbase = 
 	parent = rpm/indigo/cob_gazebo_ros_control
-	previous = 
+	previous = 708ad46
