--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36ec2dc
+	base = 992f83d
 	trimbase = 
 	parent = rpm/indigo/cob_gazebo_plugins
-	previous = 
+	previous = 36ec2dc
