--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 377942a
+	base = ad5477c
 	trimbase = 
 	parent = rpm/indigo/cob_gazebo_ros_control
-	previous = 
+	previous = 377942a
